Bug 405114 - [Wayland] Video preview plays in a separate window with the VLC backend
Summary: [Wayland] Video preview plays in a separate window with the VLC backend
Status: RESOLVED FIXED
Alias: None
Product: Phonon
Classification: Frameworks and Libraries
Component: frontend (other bugs)
Version First Reported In: 4.10.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Harald Sitter
URL:
Keywords: wayland-only
: 411889 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-03-05 13:15 UTC by Patrick Silva
Modified: 2019-09-25 10:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (486.33 KB, image/png)
2019-03-05 13:15 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-03-05 13:15:17 UTC
Created attachment 118574 [details]
screenshot

STEPS TO REPRODUCE
1. open dolphin
2. if info panel (in the right side) is not activated, activate it by pressing F11
3. select some video file
4. click the button to play the video present in the info panel 

OBSERVED RESULT
video preview plays in a separate window, video area in info panel is black.
See the screenshot please.

EXPECTED RESULT
do not open another window, video preview is embedded in the info panel

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.2
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.1
Comment 1 David Edmundson 2019-03-05 15:24:22 UTC
Works here :/

Maybe depends on the phonon backend. I tried changing mine to VLC, but I still see it.

Can you see if the phonon backend makes a difference?
Comment 2 Patrick Silva 2019-03-05 15:28:46 UTC
gstreamer works as expected, vlc is buggy.
Comment 3 Patrick Silva 2019-09-13 23:19:20 UTC
*** Bug 411889 has been marked as a duplicate of this bug. ***
Comment 4 Elvis Angelaccio 2019-09-14 11:12:50 UTC
I can also reproduce, gstreamer backend works, vlc backend doesn't work.

I don't think this is a dolphin bug, moving to phonon for now.

Dolphin output:
[0000555a20721d00] main audio output error: too low audio sample frequency (0)
[00007f922c12b360] main decoder error: failed to create audio output
[0000555a20721d00] vlcpulse audio output error: digital pass-through stream connection failure: Not supported
[0000555a20721d00] main audio output error: module not functional
[00007f922c12b360] main decoder error: failed to create audio output
[swscaler @ 0x55ddb056b780] Warning: data is not aligned! This can lead to a speed loss
[00007f921008bfc0] xcb_window window error: bad X11 window 0x0000000e
[7539 - qt.qpa.wayland.backingstore] unknown(): Delivering update request through fallback timer, may not be in sync with display
[7539 - qt.qpa.wayland] unknown(): Non-toplevel surfaces can't request window states
[00007f922c01c7f0] avcodec decoder: Using Intel i965 driver for Intel(R) Sandybridge Mobile - 2.3.0 for hardware decoding
[00007f921008bfc0] xdg_shell window error: request 3 not implemented
[h264 @ 0x7f922c07c380] get_buffer() failed
[h264 @ 0x7f922c07c380] thread_get_buffer() failed
[h264 @ 0x7f922c07c380] decode_slice_header error
[h264 @ 0x7f922c07c380] no frame!
[h264 @ 0x7f922c08c1c0] get_buffer() failed
[h264 @ 0x7f922c08c1c0] thread_get_buffer() failed
[h264 @ 0x7f922c08c1c0] decode_slice_header error
[h264 @ 0x7f922c08c1c0] no frame!
Comment 5 Harald Sitter 2019-09-18 09:22:28 UTC
Git commit 0ddf289d7e2a2bb98567dd450d75a52d9098d17f by Harald Sitter.
Committed on 18/09/2019 at 09:19.
Pushed by sitter into branch 'master'.

only set xwindow when the qt platform actually is xcb (on unix)

on wayland this would naturally behave incorrectly, so in all cases other
than xcb we use surface painting in absence of better rendering options in
VLC<4. this does come at the price of performance unfortunately.

this should be replaced with vlc4 through either wayland api
https://trac.videolan.org/vlc/ticket/16106
or libvlc_video_engine_opengl and a custom opengl renderer targeting
zero memcpy

M  +22   -8    src/video/videowidget.cpp
M  +6    -1    src/video/videowidget.h

https://commits.kde.org/phonon-vlc/0ddf289d7e2a2bb98567dd450d75a52d9098d17f
Comment 6 Harald Sitter 2019-09-25 10:58:53 UTC
Git commit b49ba0cefe87dba67f3dbab97a0c2519b2fb58dc by Harald Sitter.
Committed on 25/09/2019 at 10:57.
Pushed by sitter into branch '0.11'.

only set xwindow when the qt platform actually is xcb (on unix)

on wayland this would naturally behave incorrectly, so in all cases other
than xcb we use surface painting in absence of better rendering options in
VLC<4. this does come at the price of performance unfortunately.

this should be replaced with vlc4 through either wayland api
https://trac.videolan.org/vlc/ticket/16106
or libvlc_video_engine_opengl and a custom opengl renderer targeting
zero memcpy

M  +22   -8    src/video/videowidget.cpp
M  +6    -1    src/video/videowidget.h

https://commits.kde.org/phonon-vlc/b49ba0cefe87dba67f3dbab97a0c2519b2fb58dc