only set xwindow when the qt platform actually is xcb (on unix)

on wayland this would naturally behave incorrectly, so in all cases other
than xcb we use surface painting in absence of better rendering options in
VLC<4. this does come at the price of performance unfortunately.

this should be replaced with vlc4 through either wayland api
https://trac.videolan.org/vlc/ticket/16106
or libvlc_video_engine_opengl and a custom opengl renderer targeting
zero memcpy

BUG: 405114